--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         width: 100%;
         margin: 0px;
         font-family: 'Roboto', sans-serif;
-        background: url("kotori.png");
+        background: url("/kotori.png");
         background-repeat: no-repeat;
         background-position: right bottom;
         background-size: 800px 800px;
