--- a/index.html
+++ b/index.html
@@ -5,19 +5,34 @@
         width: 100%;
         margin: 0px;
         font-family: 'Roboto', sans-serif;
-        background: url("/kotori.png");
+        background: url("kotori.png");
         background-repeat: no-repeat;
-        background-position: right bottom;
+        background-position: right bottom 49px;
         background-size: 800px 800px;
         background-attachment: fixed;
     }
     header {
         background-color: #FF9DC6;
-        width: 100%;
         height: 120px;
+        padding: 0px;
+        margin: 0px;
+    }
+    a {
+        position: relative;
+        display: inline-block;
+        font-weight: bold;
+        font-size: 50;
+        color: black;
+    }
+    a span {
+        position: absolute;
+        top: 64px;
+    }
+    a:hover > span {
+        text-decoration: underline;
     }
     nav {
-        background-color: gray;
+        background-color: grey;
         height: 30px;
         box-shadow: 0px 3px 10px -2px #808080;
     }
@@ -59,6 +74,7 @@
         width: 100%;
         height: 70px;
         padding-left: 10px;
+        padding-right: 10px;
         color: black;
     }
     table {
@@ -66,6 +82,27 @@
     }
     tr:hover {
         background-color: lightgrey;
+    }
+    footer {
+        background-color: grey;
+        color: lightgrey;
+        position: fixed;
+        bottom: 0;
+        height: 49px;
+        width: 100%;
+    }
+    ul {
+        float: left;
+    }
+    li {
+        display: inline-block;
+        list-style: none;
+        padding-right: 10px;
+        padding-left: 10px;
+        border-right: 1px solid lightgray;
+    }
+    ul > li {
+        vertical-align: middle;
     }
     @media screen and (max-width: 820px ) {
         aside {
@@ -75,6 +112,11 @@
             border-right: 2px solid #FF9DC6;
             border-radius: 0px;
             color: aqua;
+            margin-bottom: 100px;
+        }
+        ul {
+            float: none;
+            text-align: center;
         }
     }
 </style>
@@ -82,7 +124,7 @@
 
 <body>
     <header>
-        header
+        <a href="index.html"><img src="kotori.png" alt="Logo" style="width: 120px; transform: scale(-1,-1);"><span>Pleblist</span></a>
     </header>
     <nav>
         nav
@@ -110,4 +152,7 @@
             </table>
         </aside>
     </main>
+    <footer>
+        <ul><li>Server time: 00:00:00</li><li>asdasdasdasdasd</li></ul>
+    </footer>
 </body>
