--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <article>
             </article>
         </section>
-        <aside>asdasdasdasds
+        <aside>
             <table>
                 <tr><td>Draft - Forfeits</td><td>123</td></tr>
                 <tr><td>asdasd</td><td>123</td></tr>
