--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <style>
     body {
-        width: 100%;
         margin: 0px;
         font-family: 'Roboto', sans-serif;
         background: url("kotori.png");
@@ -41,33 +40,37 @@
         margin-left: auto;
         margin-right: auto;
         padding: 30px;
+        
 /*        border: 1px solid;*/
     }
     section {
-        width: 560px;
+        max-width: 100%;
         float:left;
         margin-right: 20px;
         margin-bottom: 20px;
     }
     #playerButtons {
+        width: 100%;
         height: 50px;
         margin-bottom: 20px;
         border-bottom: 2px solid #FF9DC6;
     }
     article {
         background-color: white;
-        height: 300px;
-        max-width: 100%;
+        width: 100%;
+        height: 100px;
         box-shadow: 0px 3px 10px -2px #808080;
     }
     aside {
         background-color: rgba(255, 255, 255, 0.8);
         max-width: 100%;
+        max-height: 700px;
+        margin-bottom: 50px;
         border-left: 2px solid #FF9DC6;
         border-right: 14px solid #FF9DC6;
         box-shadow: 0px 3px 10px -2px #808080;
         border-radius: 0px 10px 10px 0px;
-        overflow: hidden;
+        overflow: auto;
         margin-right: 50px;
     }
     td {
@@ -76,9 +79,15 @@
         padding-left: 10px;
         padding-right: 10px;
         color: black;
+        white-space: nowrap;
+    }
+    tr td:first-child {
+        max-width: 1px;
+        overflow: hidden;
     }
     table {
         border-collapse: collapse;
+        table-layout: fixed;
     }
     tr:hover {
         background-color: lightgrey;
@@ -90,6 +99,7 @@
         bottom: 0;
         height: 49px;
         width: 100%;
+        box-shadow: inset 0px 7px 10px -7px black;
     }
     ul {
         float: left;
@@ -104,11 +114,13 @@
     ul > li {
         vertical-align: middle;
     }
+    
+/*    nämä, jos pieni ikkuna*/
     @media screen and (max-width: 820px ) {
         aside {
             position: static;
             float: left;
-            width: 559px;
+            width: 100%;
             border-right: 2px solid #FF9DC6;
             border-radius: 0px;
             color: aqua;
@@ -117,6 +129,14 @@
         ul {
             float: none;
             text-align: center;
+        }
+        section {
+            width: 100%;
+        }
+    }
+    @media screen and (max-height: 935px ){
+        aside {
+            height: 560px;
         }
     }
 </style>
@@ -133,18 +153,38 @@
         <section>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/zbgBKQcBV6A" frameborder="0" allowfullscreen></iframe>
             <article id=playerButtons>
+                article #playerButton
             </article>
             <article>
+                article
             </article>
         </section>
         <aside>
             <table>
+                <tr><td>aside</td><td>123</td></tr>
+                <tr><td>asdasd</td><td>123</td></tr>
+                <tr><td>asdasd</td><td>123</td></tr>
+                <tr><td>asdasduihasuidhasiudhasidhauisdhuasidhasidhaisdhaisdhiashdiuasd</td><td>123</td></tr>
+                <tr><td>asdasd</td><td>123</td></tr>
+                <tr><td>asdasd</td><td>123</td></tr>
                 <tr><td>Draft - Forfeits</td><td>123</td></tr>
-                <tr><td>asdasd</td><td>123</td></tr>
-                <tr><td>asdasd</td><td>123</td></tr>
-                <tr><td>asdasd</td><td>123</td></tr>
-                <tr><td>asdasd</td><td>123</td></tr>
-                <tr><td>asdasd</td><td>123</td></tr>
+                <tr><td>Draft - Forfeits</td><td>123</td></tr>
+                <tr><td>Draft - Forfeits</td><td>123</td></tr>
+                <tr><td>Draft - Forfeits</td><td>123</td></tr>
+                <tr><td>Draft - Forfeits</td><td>123</td></tr>
+                <tr><td>Draft - Forfeits</td><td>123</td></tr>
+                <tr><td>Draft - Forfeits</td><td>123</td></tr>
+                <tr><td>Draft - Forfeits</td><td>123</td></tr>
+                <tr><td>Draft - Forfeits</td><td>123</td></tr>
+                <tr><td>Draft - Forfeits</td><td>123</td></tr>
+                <tr><td>Draft - Forfeits</td><td>123</td></tr>
+                <tr><td>Draft - Forfeits</td><td>123</td></tr>
+                <tr><td>Draft - Forfeits</td><td>123</td></tr>
+                <tr><td>Draft - Forfeits</td><td>123</td></tr>
+                <tr><td>Draft - Forfeits</td><td>123</td></tr>
+                <tr><td>Draft - Forfeits</td><td>123</td></tr>
+                <tr><td>Draft - Forfeits</td><td>123</td></tr>
+                <tr><td>Draft - Forfeits</td><td>123</td></tr>
                 <tr><td>Draft - Forfeits</td><td>123</td></tr>
                 <tr><td>Draft - Forfeits</td><td>123</td></tr>
                 <tr><td>Draft - Forfeits</td><td>123</td></tr>
