--- a/login.html
+++ b/login.html
@@ -228,7 +228,7 @@
             <form method="get">
                 <input type="text" name="name" placeholder="username"><br>
                 <input type="password" name="password" placeholder="password"><br>
-                <button type="submit" name="signin">Sign in</button>
+                <button type="submit" name="signup">Sign up</button>
                 <button type="submit" name="login">Login</button>
             </form>
         </article>
