--- a/index.html
+++ b/index.html
@@ -18,19 +18,23 @@
     </ul>
     <p>! Work In Progress !</p>
   </div>
-  <div class="box">
+  <div class="box about">
     <h1 class="center">
       About me
     </h1>
     <p class="center">Fourth-year Software Engineering student at JAMK University of Applied Sciences.</p>
     <h2>Skills</h2>
-    <ul class="center">
-      <li>Javascript | React.js</li>
-      <li>Android | Java</li>
+    <i>Best</i>
+    <ol class="center">
       <li>C#</li>
+      <li>Javascript | React.js</li>
       <li>Unity</li>
+    </ol>
+    <i>Some experience</i>
+    <ol class="center"></ol>
+      <li>Android | Java</li>
       <li>MySQL</li>
-    </ul>
+    </ol>
     <h2>Interests</h2>
     <ul class="center">
       <li>Game Development</li>
@@ -40,12 +44,17 @@
   <h1 class="center">Portfolio</h1>
   <div class="box">
     <h2>TACS</h2>
+    <i>Role: Front-end developer</i>
+    <i>Technologies: Javascript, React.js</i>
+    <br>
     <a href="https://gitlab.labranet.jamk.fi/wimma-lab-2019/overflow">Gitlab</a>
     <a href="http://wimma-lab-2019.pages.labranet.jamk.fi/overflow/site/">Project team's website</a>
     <p>Updated version of an old situational awareness system for EHASA ry's airsoft games.</p>
   </div>
   <div class="box">
     <h2>Playlist website</h2>
+    <i>Technologies: Javascript, PHP</i>
+    <br>
     <a href="https://student.labranet.jamk.fi/~H9031/pleblist/index.php">Website</a>
     <p>School project website where users can add videos to a playlist that updates automatically when playing video ends or is skipped.<br>
       Videos can be skipped so the next video in the list will be played or user can choose a video from the playlist to play.<br>
@@ -54,20 +63,29 @@
   </div>
   <div class="box">
     <h2>Vehicle GPS-tracker</h2>
+    <i>Role: Developer, Designer</i>
+    <i>Technologies: Android, Java</i>
+    <br>
     <p>
       Vehicle tracking application prototype for Android devices made for <a href="https://aitiofinland.com/">Aitio Finland Oy</a> in a school project course.
     </p>
   </div>
   <div class="box">
     <h2>Pulkmuzzle</h2>
+    <i>Role: Lead Developer, Designer</i>
+    <i>Technologies: Unity, C#</i>
+    <br>
     <a href="https://www.youtube.com/watch?v=Fvg0rWqUUxQ">Trailer video</a>
     <a href="https://student.labranet.jamk.fi/~H9031/ttw0211-game-basics/pulkmuzzle/">Playable game</a>
-    <p>Video game</p>
+    <p>Video game...</p>
   </div>
   <div class="box">
-      <h2>Uber Simulator</h2>
-      <a href="https://github.com/aamoJL/ubersim">Github</a>
-      <a href="https://aamojl.github.io/ubersim/">Playable game</a>
-      <p>Video game</p>
-    </div>
+    <br>
+    <h2>Uber Simulator</h2>
+    <i>Role: Lead Developer, Lead Designer</i>
+    <i>Technologies: Unity, C#</i>
+    <a href="https://github.com/aamoJL/ubersim">Github</a>
+    <a href="https://aamojl.github.io/ubersim/">Playable game</a>
+    <p>Video game...</p>
+  </div>
 </body>
