--- a/index.html
+++ b/index.html
@@ -10,31 +10,37 @@
   <script src="index.js" type="text/javascript"></script>
 </head>
 <body>
-  <div id="header" class="page-container">
+  <header class="page-header page-container">
     <div class="row center">
-      <div id="header-info" class="col">
-        <div class="header-title">
-          <h1>Joni Laukka</h1>
+      <div class="header-info col">
+        <div class="row">
+          <h1 class="header-title">Joni Laukka</h1>
           <div class="header-contact-icons">
-            <a href="https://github.com/aamoJL" target="_blank"><img alt="LinkedIn-logo" src="logos/GitHub-Mark-64px.png" class="contact-icon" /></a>
-            <a href="https://www.linkedin.com/in/joni-laukka/" target="_blank"><img alt="LinkedIn-logo" src="logos/LI-In-Bug.png" class="contact-icon" /></a>
+            <a href="https://github.com/aamoJL" target="_blank"><img alt="LinkedIn-logo" src="logos/GitHub-Mark-64px.png" /></a>
+            <a href="https://www.linkedin.com/in/joni-laukka/" target="_blank"><img alt="LinkedIn-logo" src="logos/LI-In-Bug.png" /></a>
           </div>
         </div>
-        <p>Software Engineering student at JAMK University of Applied Sciences</p>
-        <div>
-          <p
-            ><b><span class="font-smaller">Interests:</span></b
-            ><br />Data visualization <span class="text-divider">|</span> Design Patterns <span class="text-divider">|</span> Virtual Reality</p
-          >
-        </div>
+        <p><b>Software Engineer</b></p>
+        <p>
+          <b><span class="font-smaller">Education:</span></b>
+          <br />
+          Bachelor's Degree in Software Engineering from JAMK University of Applied Sciences
+        </p>
+        <p>
+          <b class="font-smaller">Interests:</b>
+          <br />
+          Data visualization <span class="text-divider">|</span> Design Patterns <span class="text-divider">|</span> Virtual Reality
+        </p>
       </div>
     </div>
-  </div>
-  <nav id="navbar">
+  </header>
+
+  <nav>
     <div onclick="scrollToId('skills')">Skills</div>
     <div onclick="scrollToId('experience')">Job experience</div>
     <div onclick="scrollToId('projects')">Projects</div>
   </nav>
+
   <div id="skills" class="page-container page-divider">
     <h2>Skills</h2>
     <div class="row center">
@@ -43,34 +49,24 @@
           <h3>Web Fullstack</h3>
           <div class="col" style="gap: 0.25em">
             <div class="row" style="gap: 0.25em 1em; flex-wrap: wrap">
-              <div class="skill-text">Frontend:</div>
               <div class="skill-text"> <img src="logos/512px-React-icon.png" alt="React" class="skill-img" /><span>React</span> </div>
-              <div class="skill-text"> <img src="logos/bootstrap-logo.png" alt="Bootstrap" class="skill-img" /><span>Bootstrap</span> </div>
-              <div class="skill-text"> <img src="logos/MUI-logo.png" alt="Material UI" class="skill-img" /><span>Material UI</span> </div>
-            </div>
-            <div class="row" style="gap: 0.25em 1em; flex-wrap: wrap">
-              <div class="skill-text">Backend:</div>
               <div class="skill-text"> <img src="logos/nodejs-new-pantone-black.svg" alt="Node.js" class="skill-img" /><span>Node.js</span> </div>
-              <div class="skill-text"> <img src="logos/feathersjs_logo.png" alt="Feathers" class="skill-img" /><span>Feathers.js (Node.js)</span> </div>
             </div>
           </div>
         </div>
         <div class="row skill-texts">
           <h3>Software</h3>
-          <div class="skill-text"> <img src="logos/C_sharp_Icon.png" alt="WPF" class="skill-img" /><span>.NET</span> </div>
-          <div class="skill-text"> <img src="logos/1280px-Electron_Software_Framework_Logo.png" alt="Electron" class="skill-img" /><span>Electron (Node.js)</span> </div>
-          <div class="skill-text"> <img src="logos/Android_logo.png" alt="Android" class="skill-img" /><span>Android (Java)</span> </div>
+          <div class="skill-text"> <img src="logos/dotnet-logo.jpg" alt="WPF" class="skill-img" /><span>.NET</span> </div>
+          <div class="skill-text"> <img src="logos/Android_logo.png" alt="Android" class="skill-img" /><span>Android</span> </div>
         </div>
         <div class="row skill-texts">
           <h3>Database</h3>
-          <div class="skill-text"> <img src="logos/logo-mysql-170x115.png" alt="MySQL" class="skill-img" /><span>MYSQL</span> </div>
-          <div class="skill-text"> <img src="" alt="" class="skill-img" /><span>PostgreSQL</span> </div>
+          <div class="skill-text"> <img src="logos/logo-mysql-170x115.png" alt="MySQL" class="skill-img" /><span>MySQL</span> </div>
+          <div class="skill-text"> <img src="logos/PostgreSQL-logo.png" alt="PostgreSQL" class="skill-img" /><span>PostgreSQL</span> </div>
         </div>
         <div class="row skill-texts">
           <h3>Video Games</h3>
-          <div class="skill-text"> <img src="logos/Unity-logo.png" alt="Unity" class="skill-img" /><span>UNITY</span> </div>
-          <div class="skill-text"> <img src="logos/Unity-logo.png" alt="Virtaul Reality" class="skill-img" /><span>VIRTUAL REALITY</span> </div>
-          <!-- <div class="skill-text"> <img src="logos/blender_icon_512x512.png" alt="Blender" class="skill-img" /><span>BLENDER</span> </div> -->
+          <div class="skill-text"> <img src="logos/Unity-cube-logo.png" alt="Unity" class="skill-img" /><span>Unity / VR</span> </div>
         </div>
       </div>
     </div>
