Descriptions updated, background image added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       <div class="background"></div>
       <div class="card-body">
         <h1>Joni Laukka</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <p>Web full-stack, .Net desktop and Android software developer.
+          <br>Interested in desing patterns and UX.
+        </p>
         <div class="badges">
           <span class="badge">.Net</span>
           <span class="badge">React</span>
@@ -55,11 +57,9 @@
             <span class="badge secondary">Node.js</span>
           </div>
           <div class="description">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vehicula diam nec urna hendrerit,
-              ut dapibus nisl luctus. Donec tincidunt accumsan tellus, bibendum dapibus sapien pellentesque ut. Sed
-              scelerisque ligula et dui sodales, nec viverra mauris cursus. Sed suscipit, justo vitae dignissim feugiat,
-              dolor ex ultrices metus, eget volutpat nunc velit nec nisl. Duis eu tellus non tortor euismod ullamcorper.
-              Aenean vitae diam cursus, tristique nibh in, dignissim odio.</p>
+            <p>My team was responsible for porting the WIMMA Lab 2021's social game platform project Haastix from React
+              Native based mobile
+              application to React based website, and continue to develop the project further.</p>
           </div>
         </div>
       </div>
@@ -120,6 +120,4 @@
 <!-- 
 TODO:
 add image popup to the project?
-write introduction
-write wimma description
   -->
